--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -8,13 +8,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
-
-<div class="container-fluid product-detail-content">
+<section class="container-fluid product-detail-content">
   <div class="row">
     <!-- Product Image -->
     <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-      <div class="image-container my-5">
+      <figure class="image-container my-5">
         {% if product.image %}
           <a href="{{ product.image.url }}" target="_blank">
             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -24,17 +22,17 @@
             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
           </a>
         {% endif %}
-      </div>
+      </figure>
     </div>
 
     <!-- Product Info -->
     <div class="col-12 col-md-6 col-lg-4">
-      <div class="product-details-container mb-5 mt-md-5">
-        <p class="mb-0 product-name logo-font text-uppercase font-weight-bold">
+      <article class="product-details-container mb-5 mt-md-5">
+        <h1 class="product-name logo-font text-uppercase font-weight-bold">
           <i class="fas fa-screwdriver-wrench text-primary mr-2"></i>{{ product.name }}
-        </p>
+        </h1>
 
-        <p class="lead mb-0 text-left font-weight-bold product-price">£{{ product.price }}</p>
+        <p class="lead mb-0 product-price">£{{ product.price }}</p>
 
         {% if product.category %}
           <p class="small mt-1 mb-0">
@@ -61,22 +59,26 @@
 
         <!-- Wishlist Toggle -->
         {% if request.user.is_authenticated %}
-        <form method="POST" action="{% url 'toggle_wishlist' product.id %}" class="d-inline-block mt-3">
-          {% csrf_token %}
-          <button type="submit"
-                  class="btn btn-outline-navy btn-sm rounded-0 wishlist-btn"
-                  title="{% if in_wishlist %}Remove from Wishlist{% else %}Add to Wishlist{% endif %}">
-            {% if in_wishlist %}
-              <i class="fas fa-heart text-danger mr-1"></i> In Wishlist
-            {% else %}
-              <i class="far fa-heart text-muted mr-1"></i> Add to Wishlist
-            {% endif %}
-          </button>
-        </form>
+          <div class="wishlist-wrapper mt-3">
+            <form method="POST" action="{% url 'toggle_wishlist' product.id %}">
+              {% csrf_token %}
+              <button type="submit"
+                      class="btn btn-outline-navy btn-sm wishlist-btn w-100"
+                      title="{% if in_wishlist %}Remove from Wishlist{% else %}Add to Wishlist{% endif %}">
+                {% if in_wishlist %}
+                  <i class="fas fa-heart text-danger mr-1"></i> In Wishlist
+                {% else %}
+                  <i class="far fa-heart text-muted mr-1"></i> Add to Wishlist
+                {% endif %}
+              </button>
+            </form>
+          </div>
         {% endif %}
 
-        <!-- Description -->
-        <p class="mt-3">{{ product.description }}</p>
+        <!-- Product Description -->
+        <section class="product-description mt-3">
+          <p>{{ product.description }}</p>
+        </section>
 
         <!-- Add to Bag Form -->
         <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
@@ -85,7 +87,7 @@
             {% if product.has_sizes %}
               <div class="col-12">
                 <p><strong>Select Option:</strong></p>
-                <select class="form-control rounded-0 w-50" name="product_size" required>
+                <select class="form-control w-50" name="product_size" required>
                   {% if product.variant_type == "sds_drill" or product.variant_type == "drill_driver" or product.variant_type == "impact_driver" %}
                     <option value="12V">12V</option>
                     <option value="18V">18V</option>
@@ -114,46 +116,45 @@
               </div>
             {% endif %}
 
+            <!-- Quantity Input -->
             <div class="col-12">
               <p class="mt-3"><strong>Quantity:</strong></p>
-              <div class="form-group w-50">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <button class="decrement-qty btn btn-sm btn-navy qty-button rounded-0"
-                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                      <span class="icon"><i class="fas fa-minus"></i></span>
-                    </button>
-                  </div>
-                  <input class="form-control qty_input" type="number" name="quantity" value="1"
-                         min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                  <div class="input-group-append">
-                    <button class="increment-qty btn btn-sm btn-navy qty-button rounded-0"
-                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                      <span class="icon"><i class="fas fa-plus"></i></span>
-                    </button>
-                  </div>
+              <div class="input-group qty-wrapper">
+                <div class="input-group-prepend">
+                  <button class="decrement-qty btn btn-sm btn-navy qty-button"
+                          data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                </div>
+                <input class="form-control qty_input" type="number" name="quantity" value="1"
+                       min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                <div class="input-group-append">
+                  <button class="increment-qty btn btn-sm btn-navy qty-button"
+                          data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                    <i class="fas fa-plus"></i>
+                  </button>
                 </div>
               </div>
             </div>
 
             <!-- Buttons -->
-            <div class="col-12 mt-2">
-              <a href="{% url 'products' %}" class="btn btn-outline-navy rounded-0 mt-5">
-                <span class="icon"><i class="fas fa-chevron-left"></i></span>
-                <span class="text-uppercase">Keep Shopping</span>
+            <div class="col-12 mt-3 d-flex flex-column gap-2">
+              <a href="{% url 'products' %}" class="btn btn-outline-navy">
+                <i class="fas fa-chevron-left mr-1"></i> Keep Shopping
               </a>
-              <button type="submit" class="btn btn-navy rounded-0 text-white text-uppercase mt-5">
+              <button type="submit" class="btn btn-navy text-white text-uppercase">
                 Add to Bag
               </button>
             </div>
 
+            <!-- Redirect -->
             <input type="hidden" name="redirect_url" value="{{ request.path }}">
           </div>
         </form>
-      </div>
+      </article>
     </div>
   </div>
-</div>
+</section>
 {% endblock %}
 
 {% block postloadjs %}
