--- a/templates/base.html
+++ b/templates/base.html
@@ -28,19 +28,20 @@
 </head>
 
 <body class="{% block body_class %}{% endblock %}">
-  <header class="container-fluid fixed-top">
-    <!-- Top Header -->
-    <div class="row pt-lg-2 d-none d-lg-flex warrior-header">
-      <div class="col-12 col-lg-4 my-auto py-1 text-center text-lg-left">
+<div class="d-flex flex-column min-vh-100"><!-- ✅ full height flex wrapper -->
+
+  <header class="container-fluid fixed-top warrior-header">
+    <!-- Top Bar -->
+    <section class="row pt-lg-2 d-none d-lg-flex">
+      <div class="col-12 col-lg-4 text-center text-lg-left my-auto py-1">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
           <h2 class="logo-font my-0"><strong>Warrior</strong> Tools</h2>
         </a>
       </div>
-
       <div class="col-12 col-lg-4 my-auto py-1">
         <form method="GET" action="{% url 'products' %}">
           <div class="input-group w-100">
-            <input class="form-control search-input" type="text" name="q">
+            <input class="form-control search-input" type="text" name="q" placeholder="Search products...">
             <div class="input-group-append">
               <button class="btn search-button" type="submit">
                 <i class="fas fa-search"></i>
@@ -49,16 +50,12 @@
           </div>
         </form>
       </div>
-
-      <div class="col-12 col-lg-4 my-auto py-1">
-        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-          <!-- My Account -->
+      <nav class="col-12 col-lg-4 my-auto py-1 text-center text-lg-right">
+        <ul class="list-inline list-unstyled my-0">
           <li class="list-inline-item dropdown">
-            <a class="nav-link text-light" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <div class="text-center">
-                <i class="fas fa-user fa-lg"></i>
-                <p class="my-0">My Account</p>
-              </div>
+            <a class="nav-link text-light" href="#" id="user-options" data-toggle="dropdown">
+              <i class="fas fa-user fa-lg"></i><br>
+              <span>My Account</span>
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="user-options">
               {% if request.user.is_authenticated %}
@@ -73,25 +70,21 @@
               {% endif %}
             </div>
           </li>
-
-          <!-- Cart -->
           <li class="list-inline-item">
             <a class="nav-link cart-link" href="{% url 'view_bag' %}">
-              <div class="text-center">
-                <i class="fas fa-shopping-bag fa-lg"></i>
-                <p class="my-0 cart-total">
-                  {% if grand_total %}£{{ grand_total|floatformat:2 }}{% else %}£0.00{% endif %}
-                </p>
-              </div>
+              <i class="fas fa-shopping-bag fa-lg"></i><br>
+              <span class="cart-total oswald-font">
+                {% if grand_total %}£{{ grand_total|floatformat:2 }}{% else %}£0.00{% endif %}
+              </span>
             </a>
           </li>
         </ul>
-      </div>
-    </div>
+      </nav>
+    </section>
 
-    <!-- Navigation -->
-    <div class="row warrior-header">
-      <nav class="navbar navbar-expand-lg navbar-dark w-100">
+    <!-- Main Navigation -->
+    <nav class="row" aria-label="Main navigation">
+      <div class="navbar navbar-expand-lg navbar-dark w-100">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -99,20 +92,22 @@
           {% include 'includes/mobile-top-header.html' %}
         </ul>
         {% include 'includes/main-nav.html' %}
-      </nav>
-    </div>
+      </div>
+    </nav>
 
     <!-- Delivery Banner -->
-    <div class="row delivery-banner text-center">
+    <section class="row delivery-banner text-center" aria-label="Free delivery offer">
       <div class="col">
-        <h4 class="logo-font my-1"><i class="fas fa-truck"></i> Free delivery on orders over £{{ free_delivery_threshold }}!</h4>
+        <h4 class="logo-font my-1">
+          <i class="fas fa-truck"></i> Free delivery on orders over £{{ free_delivery_threshold }}!
+        </h4>
       </div>
-    </div>
+    </section>
   </header>
 
   <!-- Toast Messages -->
   {% if messages and request.path != '/newsletter/subscribe/' and request.path != '/newsletter/unsubscribe/' %}
-    <div class="message-container">
+    <aside class="message-container" aria-live="polite">
       {% for message in messages %}
         {% with message.level as level %}
           {% if level == 40 %}
@@ -126,20 +121,31 @@
           {% endif %}
         {% endwith %}
       {% endfor %}
-    </div>
+    </aside>
   {% endif %}
 
-  {% block page_header %}{% endblock %}
-  {% block content %}{% endblock %}
+  <!-- Main Content -->
+  <main class="page-content">
+    {% block page_header %}{% endblock %}
+    {% block content %}{% endblock %}
+  </main>
 
-  {% block postloadjs %}
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script>
-      $('.toast').toast('show');
-      $('.alert').alert();
-    </script>
-  {% endblock %}
+  <!-- Footer -->
+  <footer class="{% block footer_theme %}footer-dark{% endblock %}">
+    {% include 'includes/footer.html' %}
+  </footer>
+
+</div> <!-- end flex wrapper -->
+
+{% block postloadjs %}
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script>
+    $('.toast').toast('show');
+    $('.alert').alert();
+  </script>
+{% endblock %}
+
 </body>
 </html>
