--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,53 +1,56 @@
-<div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav w-auto mx-auto">
-        <!-- All Tools -->
-        <li class="nav-item dropdown">
-            <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
-               href="#" id="all-tools-link" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false">
-                All Tools
-            </a>
-            <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="all-tools-link">
-                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Tools</a>
-            </div>
-        </li>
+{% comment %} Main Navigation Menu {% endcomment %}
+<nav class="collapse navbar-collapse" id="main-nav" role="navigation" aria-label="Main site navigation">
+  <ul class="navbar-nav w-auto mx-auto">
 
-        <!-- Power Tools -->
-        <li class="nav-item dropdown">
-            <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
-               href="#" id="power-tools-link" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false">
-                Power Tools
-            </a>
-            <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="power-tools-link">
-                <a href="{% url 'products' %}?category=drills" class="dropdown-item">Drills</a>
-                <a href="{% url 'products' %}?category=saws" class="dropdown-item">Saws</a>
-                <a href="{% url 'products' %}?category=sanders" class="dropdown-item">Sanders</a>
-                <a href="{% url 'products' %}?category=drills,saws,sanders" class="dropdown-item">All Power Tools</a>
-            </div>
-        </li>
+    {% comment %} All Tools Dropdown {% endcomment %}
+    <li class="nav-item dropdown">
+      <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
+         href="#" id="all-tools-link" role="button" data-toggle="dropdown"
+         aria-haspopup="true" aria-expanded="false">
+        All Tools
+      </a>
+      <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="all-tools-link">
+        <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+        <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
+        <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
+        <a href="{% url 'products' %}" class="dropdown-item">All Tools</a>
+      </div>
+    </li>
 
-        <!-- Hand Tools -->
-        <li class="nav-item dropdown">
-            <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
-               href="#" id="hand-tools-link" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false">
-                Hand Tools
-            </a>
-            <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="hand-tools-link">
-                <a href="{% url 'products' %}?category=hammers" class="dropdown-item">Hammers & Striking Tools</a>
-                <a href="{% url 'products' %}?category=screwdrivers" class="dropdown-item">Screwdrivers</a>
-                <a href="{% url 'products' %}?category=wrenches_and_pliers" class="dropdown-item">Wrenches & Pliers</a>
-                <a href="{% url 'products' %}?category=chisels" class="dropdown-item">Chisels</a>
-                <a href="{% url 'products' %}?category=pipe_cutter" class="dropdown-item">Pipe Cutters</a>
-                <a href="{% url 'products' %}?category=spirit_level" class="dropdown-item">Spirit Levels</a>
-                <a href="{% url 'products' %}?category=tape_measure" class="dropdown-item">Tape Measures</a>
-                <a href="{% url 'products' %}?category=hand_saw" class="dropdown-item">Hand Saws</a>
-                <a href="{% url 'products' %}?category=hammers,screwdrivers,wrenches_and_pliers,chisels,pipe_cutter,spirit_level,tape_measure,hand_saw" class="dropdown-item font-weight-bold">All Hand Tools</a>
-            </div>
-        </li>
-    </ul>
-</div>
+    {% comment %} Power Tools Dropdown {% endcomment %}
+    <li class="nav-item dropdown">
+      <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
+         href="#" id="power-tools-link" role="button" data-toggle="dropdown"
+         aria-haspopup="true" aria-expanded="false">
+        Power Tools
+      </a>
+      <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="power-tools-link">
+        <a href="{% url 'products' %}?category=drills" class="dropdown-item">Drills</a>
+        <a href="{% url 'products' %}?category=saws" class="dropdown-item">Saws</a>
+        <a href="{% url 'products' %}?category=sanders" class="dropdown-item">Sanders</a>
+        <a href="{% url 'products' %}?category=drills,saws,sanders" class="dropdown-item">All Power Tools</a>
+      </div>
+    </li>
+
+    {% comment %} Hand Tools Dropdown {% endcomment %}
+    <li class="nav-item dropdown">
+      <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
+         href="#" id="hand-tools-link" role="button" data-toggle="dropdown"
+         aria-haspopup="true" aria-expanded="false">
+        Hand Tools
+      </a>
+      <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="hand-tools-link">
+        <a href="{% url 'products' %}?category=hammers" class="dropdown-item">Hammers & Striking Tools</a>
+        <a href="{% url 'products' %}?category=screwdrivers" class="dropdown-item">Screwdrivers</a>
+        <a href="{% url 'products' %}?category=wrenches_and_pliers" class="dropdown-item">Wrenches & Pliers</a>
+        <a href="{% url 'products' %}?category=chisels" class="dropdown-item">Chisels</a>
+        <a href="{% url 'products' %}?category=pipe_cutter" class="dropdown-item">Pipe Cutters</a>
+        <a href="{% url 'products' %}?category=spirit_level" class="dropdown-item">Spirit Levels</a>
+        <a href="{% url 'products' %}?category=tape_measure" class="dropdown-item">Tape Measures</a>
+        <a href="{% url 'products' %}?category=hand_saw" class="dropdown-item">Hand Saws</a>
+        <a href="{% url 'products' %}?category=hammers,screwdrivers,wrenches_and_pliers,chisels,pipe_cutter,spirit_level,tape_measure,hand_saw" class="dropdown-item font-weight-bold">All Hand Tools</a>
+      </div>
+    </li>
+
+  </ul>
+</nav>
