--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,15 +1,32 @@
-<div class="toast custom-toast rounded-0 border-top-0 bg-dark text-white shadow" data-autohide="true" data-delay="7000">
-    <div class="arrow-up arrow-danger"></div>
-    <div class="w-100 toast-capper bg-danger"></div>
+{% comment %} Toast notification container {% endcomment %}
+<aside
+  class="toast custom-toast rounded-0 border-top-0 bg-dark text-white shadow"
+  role="alert"
+  aria-live="assertive"
+  aria-atomic="true"
+  data-autohide="true"
+  data-delay="7000">
 
-    <div class="toast-header bg-dark text-white border-0">
-        <strong class="me-auto logo-font">Error!</strong>
-        <button type="button" class="close text-white ml-2 mb-1" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
+  {% comment %} Decorative arrow indicator {% endcomment %}
+  <div class="arrow-up arrow-danger"></div>
 
-    <div class="toast-body bg-dark text-white">
-        {{ message }}
-    </div>
-</div>
+  {% comment %} Visual top cap to match toast theme {% endcomment %}
+  <div class="w-100 toast-capper bg-danger"></div>
+
+  {% comment %} Toast header with dismiss button {% endcomment %}
+  <header class="toast-header bg-dark text-white border-0">
+    <strong class="me-auto logo-font">Error!</strong>
+    <button
+      type="button"
+      class="close text-white ml-2 mb-1"
+      data-dismiss="toast"
+      aria-label="Close toast message">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </header>
+
+  {% comment %} Toast body displaying the message content {% endcomment %}
+  <div class="toast-body bg-dark text-white">
+    {{ message }}
+  </div>
+</aside>
