--- a/testimonials/templates/testimonials/create_testimonial.html
+++ b/testimonials/templates/testimonials/create_testimonial.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% comment %} Apply body class for custom styling {% endcomment %}
 {% block body_class %}form-page testimonial-page{% endblock %}
 
 {% block extra_css %}
@@ -9,27 +10,35 @@
 {% endblock %}
 
 {% block content %}
-<div class="content-wrapper">
-  <div class="form-container">
-    <hr>
-    <h2 class="logo-font mb-2">Submit a Testimonial</h2>
-    <h5 class="text-primary mb-4">We’d love to hear your feedback</h5>
-    <hr>
+<main class="content-wrapper" role="main">
+  <section class="form-container">
 
-    <form method="POST">
+    {% comment %} Testimonial Form Heading {% endcomment %}
+    <header>
+      <hr>
+      <h2 class="logo-font mb-2">Submit a Testimonial</h2>
+      <h5 class="text-primary mb-4">We’d love to hear your feedback</h5>
+      <hr>
+    </header>
+
+    {% comment %} Testimonial Submission Form {% endcomment %}
+    <form method="POST" aria-label="Testimonial submission form">
       {% csrf_token %}
       {{ form|crispy }}
+
       <div class="d-flex justify-content-between mt-4">
         <a class="btn btn-outline-navy rounded-0" href="{% url 'products' %}">Cancel</a>
         <button class="btn btn-navy rounded-0" type="submit">Submit</button>
       </div>
     </form>
 
+    {% comment %} Navigation Back to Home {% endcomment %}
     <div class="text-center mt-3">
       <a href="{% url 'home' %}" class="btn btn-outline-navy">
         &larr; Back to Home
       </a>
     </div>
-  </div>
-</div>
+
+  </section>
+</main>
 {% endblock %}
